# misc

linux_course_udemy/: env_inspect.c  system_exec_write.c
vector_loads/: CMakeLists.txt  vector_loads.cpp
